--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://dpg-ck8t45s7m7is73akil3g-a.oregon-postgres.render.com/dbtodostecapicadastro
+spring.datasource.url=jdbc:postgresql://dpg-ckarhr9kms5s739c7teg-a.oregon-postgres.render.com/dbtodostec
 spring.datasource.username=henry_gois
-spring.datasource.password=x5Yzbl4h36acwnl9pCea9MfgSx3kuWo8
+spring.datasource.password=SDrwrXynodOoSWlcqES3ICuOKZrdrkQH
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
