--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.maximum-pool-size=50
+server.port=8000
 
 #spring.datasource.url=jdbc:postgresql://dpg-ck6utkvq54js73ajqeu0-a.oregon-postgres.render.com/database_q4db
 #spring.datasource.username=segundoano
