--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ server.port=8000
 
 
 spring.data.mongodb.uri=mongodb+srv://user:1234@todostec.7zd8eup.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=todosTec
+spring.data.mongodb.database=dbTodosTec
