--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,9 +1,12 @@
-name: Pipeline PROD Deploy TODOSTEC Api by Gois
+name: Pipeline PROD Deploy
 on:
   pull_request:
     branches: ["PROD"]
+    types:
+      - closed
 jobs:
   build:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
